Added player trophy tracking